<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textLocationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_element"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_25"
        app:layout_constraintBottom_toBottomOf="@id/viewItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTemperatureLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_element"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSummaryLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_element"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        android:layout_marginBottom="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTemperatureLocation"
        app:layout_constraintBottom_toBottomOf="@id/viewItem"/>

    <View
        android:id="@+id/viewItem"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorLightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
