<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCities">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textCelsiusUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_unit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewCities" />

        <TextView
            android:id="@+id/textFahrenheitUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/fahrenheit_unit"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toEndOf="@+id/textCelsiusUnit"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewCities" />

        <TextView
            android:id="@+id/textAddCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_add_city"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toTopOf="@+id/buttonAddCity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/buttonAddCity"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/hover_button"
            android:src="@drawable/ic_add_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
